# hamiltonian_compiler

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  tests.yml
benchmarks/: --init--.py  benchmark_suite.py
docs/: FAQ.md
examples/: __init__.py
hamiltoniancompiler/: __init__.py  hamiltoniancompiler.py  visualization.py
notebooks/: tutorial.ipynb
scripts/: --init--.py  compare_with_qiskit.py  generate_docs.py  profile_compiler.py  quickstart.py
tests/: __init__.py  test_hamiltoniancompiler.py
