[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hamiltoniancompiler"
version = "1.0.0"
description = "Efficient compilation of physical Hamiltonians for superconducting quantum computers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC BY-NC-SA 4.0"}
authors = [
    {name = "HamiltonianCompiler Contributors"}
]
keywords = ["quantum computing", "quantum compilation", "hamiltonian simulation", "quantum algorithms"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
hardware = [
    "qiskit>=0.43.0",
]
visualization = [
    "matplotlib>=3.5.0",
    "networkx>=2.8.0",
]
all = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "qiskit>=0.43.0",
    "matplotlib>=3.5.0",
    "networkx>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/m-pedro/hamiltonian_compiler"
Documentation = "https://github.com/m-pedro/hamiltonian_compiler/blob/main/docs/FAQ.md"
Repository = "https://github.com/m-pedro/hamiltonian_compiler"
"Bug Tracker" = "https://github.com/m-pedro/hamiltonian_compiler/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=hamiltoniancompiler --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
